# driftnet

./: .editorconfig  .env.compose  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.yaml  compose.yml  conftest.py  env.template  justfile  manage.py  mise.toml  pyproject.toml  tailwind.css  test-yaml.py
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/extensions/voidlink-python/: codeql-pack.yml
.github/workflows/: docker-prod-ghcr.yml
apps/: conftest.py
apps/alliance/: apps.py  operations.py  tasks.py
apps/clones/: apps.py
apps/corporation/: apps.py  operations.py  tasks.py
apps/esi/: __init__.py  app_settings.py  apps.py  client.py  client_stubs.py  client_stubs.pyi  decorators.py  exceptions.py  helpers.py  managers.py  models.py  plugins.py  rate_limiting.py  ready_checks.py  tasks.py  tests.py  urls.py  views.py
apps/esi/management/commands/: gen_client_stubs.py  generate_esi_stubs.py  load_esi_scopes.py  load_scopes.py
apps/esi/migrations/: 0001_initial.py  0002_alter_token_access_token_alter_token_refresh_token.py  0002_token_token_type.py  0003_remove_callbackredirect_scopes.py
apps/esi_utils/: apps.py
apps/esi_utils/management/commands/: load_scopes.py
apps/faction_warfare/: apps.py
apps/fittings/: apps.py
apps/fleets/: apps.py
apps/incursions/: apps.py
apps/industry/: apps.py
apps/killmails/: apps.py
apps/market/: urls.py  view_helpers.py  views.py
apps/market/migrations/: 0001_market_group_with_types_view.py  0002_initial.py
apps/market/models/: market_group_with_types.py
apps/market/templates/: market-index.html  market-sidebar-group.html  market-sidebar.html
apps/market/templates/cotton/: market_item_details.html
apps/market/templates/partials/: market-item-details.html  market-sidebar-group.html  market-sidebar.html
apps/planetary_interaction/: apps.py
apps/sde/: admin.py  app_settings.py  apps.py
apps/sde/management/commands/: _helpers.py  helpers.py  sde-old.py  sde.py  sde_gen_models.py  sde_gen_models.py.old
apps/sde/migrations/: 0001_initial.py  0001_schema_changelog.py  0002_initial_generator_models.py  0002_initial_model_gen.py  0002_initial_sde_models.py  0003_add_last_changed_to_checksum.py  0003_type_sde_type_market__9297cf_idx_and_more.py
apps/sde/models/: __init__.py  agent_type.py  agents.py  agents_in_space.py  ancestries.py  ancestry.py  asteroid_belts.py  bloodline.py  bloodlines.py  blueprint.py  blueprints.py  categories.py  category.py  certificate.py  certificates.py  changelog.py  character_attribute.py  character_attributes.py  checksum.py  constellations.py  contraband_type.py  contraband_types.py  control_tower_resource.py  control_tower_resources.py  corporation_activities.py  corporation_activity.py  dbuff_collection.py  dogma_attribute.py  dogma_attribute_categories.py  dogma_attribute_category.py  dogma_attributes.py  dogma_effect.py  dogma_effects.py  dogma_unit.py  dynamic_item_attribute.py  faction.py  factions.py  graphic.py  graphic_ids.py  group.py  (+61 more)
apps/server_status/: apps.py  models.py  tasks.py
apps/server_status/migrations/: 0001_initial.py  0002_alter_serverstatus_vip_mode.py
apps/serverstatus/: apps.py  models.py  tasks.py  urls.py  views.py
apps/serverstatus/migrations/: 0001_initial.py  0002_alter_serverstatus_options_serverstatus_created_at.py
apps/serverstatus/templates/: current-players.html
apps/shared/: __init__.py  esi_client.py  providers.py
apps/sovereignty/: apps.py
apps/static/css/: tailwind.css
apps/static/js/: character-delete-modal.js  character-scopes-modal.js  chart.js  navbar.js  scopes-modal.js
apps/templates/: base.html  ccp.html  footer.html  help.html  landing.html  landing.html.old  terms.html
apps/templates/account/: account_inactive.html  base_account.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  socialaccount_connections.html
apps/templates/admin/: index.html
apps/templates/cotton/: footer.html  navbar.html
apps/templates/cotton/layouts/: base.html  market.html
apps/users/: apps.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_add_userprofile.py
apps/users/templates/: characters.html  profile.html
apps/users/views/: character_delete.py
apps/wars/: apps.py  models.py  operations.py  tasks.py
apps/wars/migrations/: 0001_initial.py
assets/css/: tailwind.css
config/: asgi.py  celery_app.py  env.py  urls.py
config/settings/: __init__.py
config/settings/components/: admin.py  app_settings.py  apps.py  auth.py  cache.py  celery.py  common.py  database.py  email.py  esi.py  installed_apps.py  logging.py  middleware.py  security.py  session.py  static.py  storages.py  templates.py
config/settings/environments/: development.py  production.py  testing.py
docker/local/: Dockerfile  start-flower.sh  start-worker.sh
docker/prod/: Dockerfile  start-app.sh
e2e/: test_ccp_page.py  test_landing_page.py  test_terms_page.py
scripts/: convert-sde-yaml-to-json.sh
tests/: test_navbar_template.py
tests/playwright/: test_allauth_pages.py  test_landing_page.py  test_navbar_dropdown.py
